--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run generate-sitemap",
+    "generate-sitemap": "node generate-sitemap.cjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -28,8 +29,10 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "generate-sitemap": "^1.0.7",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
+    "sitemap": "^8.0.0",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
